welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value Biscuit
while (2*Biscuit>=caseOrange) {
         ^