welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuit=0
var caseOrange=0
while (2*Biscuit>=caseOrange) {
  avance()
  if (estSurBiscuit()) {
    biscuit+=1
  }
  if (estSurOrange()) {
    caseOrange+=1
  }
  while (!estSurBiscuit() & !estSurOrange()) {
    if (estSurBiscuit()) {
    biscuit+=1
  	}
  		if (estSurOrange()) {
    	caseOrange+=1
  	}
 	
  }
}